# Open-Radio-Encoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_ES.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
libs/butt-core/: CMakeLists.txt
libs/butt-core/dsp/: biquad.cpp  biquad.h  dsp_effects.cpp  dsp_effects.h
libs/butt-core/encoders/: aac_encoder.cpp  aac_encoder.h  encoder_interface.h  flac_encoder.cpp  flac_encoder.h  lame_encoder.cpp  lame_encoder.h  opus_encoder.cpp  opus_encoder.h  twolame_encoder.cpp  twolame_encoder.h  vorbis_encoder.cpp  vorbis_encoder.h
libs/butt-core/network/: sockfuncs.cpp  sockfuncs.h  tls_wrapper.cpp  tls_wrapper.h
libs/butt-core/protocols/: icecast_client.cpp  icecast_client.h  shoutcast_client.cpp  shoutcast_client.h
libs/butt-core/utils/: cJSON.cpp  cJSON.h  ringbuffer.cpp  ringbuffer.h  str_utils.cpp  str_utils.h  timer_utils.cpp  timer_utils.h  uri_encode.cpp  uri_encode.h
src/: App.tsx  Main.cpp
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: capture.rs  commands.rs  encoder.rs  engine.rs  mixer.rs  mod.rs  vu_meter.rs
src-tauri/src/server/: commands.rs  mod.rs
src/components/: CurrentSong.tsx  DSPSettings.tsx  MetadataConfig.tsx  Recording.tsx  StationEditor.tsx  StationList.tsx  StatusBar.tsx  TopToolbar.tsx  VUMeterPanel.tsx
src/config/: ConfigManager.cpp  ConfigManager.h
src/engine/: AudioPipeline.cpp  AudioPipeline.h  BroadcastDistributor.cpp  BroadcastDistributor.h  RecordingEngine.cpp  RecordingEngine.h  StationConnection.cpp  StationConnection.h  VST3HostProcessor.cpp  VST3HostProcessor.h
src/styles/: index.css
src/ui/: ConsoleLogComponent.cpp  ConsoleLogComponent.h  CurrentSongPanel.cpp  CurrentSongPanel.h  Icons.h  LookAndFeel_OpenRadio.cpp  LookAndFeel_OpenRadio.h  MainWindow.cpp  MainWindow.h  RecordingPanel.cpp  RecordingPanel.h  StationBlock.cpp  StationBlock.h  StreamingPanel.cpp  StreamingPanel.h  ToolbarComponent.cpp  ToolbarComponent.h  VUMeterComponent.cpp  VUMeterComponent.h
src/ui/dialogs/: AudioFxDialog.cpp  AudioFxDialog.h  ManagerDialogs.cpp  ManagerDialogs.h  MixerDialog.cpp  MixerDialog.h  SchedulerDialog.cpp  SchedulerDialog.h  SettingsDialog.cpp  SettingsDialog.h
