[package]
name = "open-radio-encoder"
version = "0.1.0"
edition = "2021"
description = "Open Radio Encoder - Lightweight multi-encoder for Icecast/Shoutcast streaming"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Audio capture
cpal = "0.15"
crossbeam-channel = "0.5"

# Encoding
mp3lame-encoder = "0.2"
hound = "3"        # WAV encoding

# Streaming & HTTP client
reqwest = { version = "0.12", features = ["blocking", "stream", "json"] }
bytes = "1"

# Remote control HTTP server
tiny_http = "0.12"

# Email notifications
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-native-tls"] }

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
